sumo/tests/sumo/output/meanhbefa_lanebased/errors/missing_begin_divider/errors.sumo
Error: Empty 'begin' in definition of meandata-lane 'dump_15'.
Quitting (on error).
